@@ -23,12 +23,6 @@ sourceSets {
         }
     }
 
-    classes {
-        java {
-            srcDirs = ['src/classes/modules']
-        }
-    }
-
     examples {
         java {
             srcDirs = ['src/examples']
@@ -36,27 +30,10 @@ sourceSets {
     }
 }
 
-// Compile model classes with --patch-module
-tasks.register('compileClasses', JavaCompile) {
-    source = fileTree(dir: 'src/classes/modules')
-    classpath = files()
-    destinationDirectory = file("${buildDir}/classes/modules")
-
-    sourceCompatibility = '11'
-    targetCompatibility = '11'
-
-    options.compilerArgs = [
-            '--module-source-path', file('src/classes/modules').absolutePath,
-            '--add-reads', 'java.base=ALL-UNNAMED',
-            '--patch-module', "java.base=" + file('src/classes/modules/java.base').absolutePath
-    ]
-}
-
 tasks.register('compileExamples', JavaCompile) {
     source = sourceSets.examples.java
-    classpath = files("${buildDir}/classes/modules")
+    classpath = files()
     destinationDirectory = file("${buildDir}/examples")
-    dependsOn compileClasses
 
     sourceCompatibility = '11'
     targetCompatibility = '11'
@@ -66,21 +43,6 @@ tasks.register('createJpfTestJar', Jar) {
     archiveFileName = 'jpf-test.jar'
     destinationDirectory = file("${buildDir}")
     from sourceSets.main.output
-}
-
-// Remove module prefix when creating jar
-tasks.register('createJpfTestClassesJar', Jar) {
-    archiveFileName = 'jpf-test-classes.jar'
-    destinationDirectory = file("${buildDir}")
-    dependsOn compileClasses
-
-    // Extract classes from each module subdirectory, removing the module prefix
-    from(fileTree("${buildDir}/classes/modules/java.base")) {
-        include '**/*.class'
-    }
-    from(fileTree("${buildDir}/classes/modules/java.logging")) {
-        include '**/*.class'
-    }
 }
 
 tasks.register('createExamplesJar', Jar) {
@@ -94,7 +56,6 @@ tasks.register('buildJars') {
     group = 'JPF Build'
     description = 'Builds all JPF test extension JARs'
     dependsOn createJpfTestJar
-    dependsOn createJpfTestClassesJar
     dependsOn createExamplesJar
 }
 
